[gd_scene load_steps=19 format=3 uid="uid://75djcwqjr3ia"]

[ext_resource type="Script" path="res://Main/Levels/level_parent_script.gd" id="1_0s6n3"]
[ext_resource type="Script" path="res://addons/beidles_nodes/Node Scripts/spawns.gd" id="2_r52fp"]
[ext_resource type="ArrayMesh" uid="uid://clt6p4nfepu44" path="res://addons/beidles_nodes/Node Assets/Item/item_mesh.tres" id="4_40lvq"]
[ext_resource type="Script" path="res://addons/beidles_nodes/Node Scripts/item.gd" id="4_g107p"]

[sub_resource type="SphereShape3D" id="SphereShape3D_0dhk8"]

[sub_resource type="SphereMesh" id="SphereMesh_drpiy"]

[sub_resource type="CylinderMesh" id="CylinderMesh_n1kpd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wavyv"]
albedo_color = Color(0.601362, 0.706596, 0.591822, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mccj0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1h7vd"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_e6kcc"]

[sub_resource type="PlaneMesh" id="PlaneMesh_v6fid"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wdclv"]
albedo_color = Color(0.273873, 0.273873, 0.273873, 1)

[sub_resource type="Environment" id="Environment_fuayd"]
background_color = Color(0, 0.698039, 0, 1)
background_energy_multiplier = 2.55

[sub_resource type="BoxShape3D" id="BoxShape3D_u7f5y"]
size = Vector3(19.702, 3.37698, 20.8148)

[sub_resource type="BoxMesh" id="BoxMesh_hlpbj"]
size = Vector3(20, 3, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_38p6o"]
size = Vector3(1.5, 2.5, 1.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_eq7lq"]
radius = 2.0

[node name="Level1" type="Node3D" node_paths=PackedStringArray("spawns_group")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.409386, 0)
script = ExtResource("1_0s6n3")
spawns_group = NodePath("Spawns")

[node name="Circle" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.88264, 3.09324, 7.44397)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Circle"]
shape = SubResource("SphereShape3D_0dhk8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Circle"]
mesh = SubResource("SphereMesh_drpiy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 28, 0)

[node name="Cylinder" type="StaticBody3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 5.06737, 1.18029, -7.87934)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinder"]
mesh = SubResource("CylinderMesh_n1kpd")
skeleton = NodePath("../../DirectionalLight3D")
surface_material_override/0 = SubResource("StandardMaterial3D_wavyv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cylinder"]
shape = SubResource("CylinderShape3D_mccj0")

[node name="Floor" type="StaticBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_1h7vd")

[node name="Floor Collision" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_e6kcc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0, 0)
mesh = SubResource("PlaneMesh_v6fid")
skeleton = NodePath("../Floor Collision")
surface_material_override/0 = SubResource("StandardMaterial3D_wdclv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fuayd")

[node name="platform 1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.9831, 6.30468, -1.91624)

[node name="CollisionShape3D" type="CollisionShape3D" parent="platform 1"]
transform = Transform3D(1.017, 0, 0, 0, 0.88, 0, 0, 0, 0.962108, -0.00351906, -0.00429344, -1.20401e-05)
shape = SubResource("BoxShape3D_u7f5y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="platform 1"]
mesh = SubResource("BoxMesh_hlpbj")

[node name="Spawns" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_r52fp")

[node name="Spawn1" type="Marker3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.7571, 9.46052, -2.86954)

[node name="Spawn2" type="Marker3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.7571, 0.383184, -22.6504)

[node name="Spawn3" type="Marker3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.6378, 3.24845, 13.5069)

[node name="Spawn4" type="Marker3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.55035, 11.98, -8.55315)

[node name="Item" type="StaticBody3D" parent="."]
script = ExtResource("4_g107p")

[node name="ItemCollision" type="CollisionShape3D" parent="Item"]
shape = SubResource("BoxShape3D_38p6o")

[node name="PickupArea" type="Area3D" parent="Item"]
collision_layer = 0
collision_mask = 2

[node name="PickupAreaCollision" type="CollisionShape3D" parent="Item/PickupArea"]
shape = SubResource("SphereShape3D_eq7lq")

[node name="ItemMesh" type="MeshInstance3D" parent="Item"]
mesh = ExtResource("4_40lvq")
